# agentkit

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agentkit/: __init__.py  catalog.py  cli.py  hook.py  installer.py  scanner.py  suggest.py  tui.py  wrapper.py
tests/: __init__.py  test_catalog.py  test_scanner.py  test_suggest.py  test_wrapper.py
