[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit"
version = "0.1.0"
description = "CLI toolkit for discovering AI coding agents and skills"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Trinath Reddy", email = "trinath.mih@gmail.com"}]
keywords = ["agents", "tools", "skills", "cli", "discovery"]

dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-frontmatter>=1.0.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
agentkit = "agentkit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["agentkit"]
